<resources>
    <string name="app_name">PruebaIdealista</string>
    <string name="toolbar_title">Juan Fran\'s idealista</string>
    <string name="favorite">Favorite</string>
    <string name="property_image">Property image</string>
    <string name="property_details_format">%1$d rooms | %2$d baths | %3$.0f m²</string>
    <string name="price_format">%1$,.0f %2$s</string>
    <string name="rooms">Rooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="characteristics">Characteristics</string>
    <string name="favorited_on">Favorited on: %1$s</string>
    <string name="favorite_prompt">Save this property to check later on your favorites list!</string>
    <string name="remove_favorite_title">Remove from favorites?</string>
    <string name="remove_favorite_message">This property will be removed from your favorites list.</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="area_format">%1$.0f m²</string>
    <string name="lift">Lift</string>
    <string name="exterior">Exterior</string>
    <string name="status">Status</string>
    <string name="floor">Floor</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tab_sale">Buy</string>
    <string name="tab_rent">Rent</string>
    <string name="tab_favorites">Favorites</string>
    <string name="empty_favorites">No favorites yet. Tap the heart icon on a property to save it here.</string>
    <string name="empty_properties">No properties to show right now.</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="detail_mode_drawer">Drawer (bottom panel over the list)</string>
    <string name="detail_mode_full_screen">Full screen</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
</resources>